<resources>
    <string name="app_name">Spy_Game</string>
    <string name="start_game">Начать игру</string>
    <string name="start_new_game_button_name">Новая игра</string>
    <string name="count_of_players">Количество игроков: 4</string>
    <string name="count_of_time">Время(мин): 4</string>
    <string name="start_game_with_params">Начать</string>
    <string name="number_of_player">Игрок номер: 1</string>
    <string name="button_for_getting_name_of_place">Получить место</string>
    <string name="timer">00:00</string>
    <string name="pause_button">Запустить</string>
    <string name="reveal_spy_button">Шпион открылся</string>
</resources>
