<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Timer">

    <TextView
        android:id="@+id/timer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:layout_marginTop="245dp"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="84dp"
        android:text="@string/timer"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/pause_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pause_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/pause_button"
        app:layout_constraintEnd_toEndOf="@+id/timer_text"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="@+id/timer_text"
        app:layout_constraintTop_toBottomOf="@+id/timer_text" />

    <Button
        android:id="@+id/reveal_spy_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="94dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="103dp"
        android:clickable="false"
        android:gravity="center"
        android:onClick="reveal_list"
        android:text="@string/reveal_spy_button"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/timer_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/new_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="81dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="158dp"
        android:clickable="false"
        android:gravity="center"
        android:onClick="start_new_game"
        android:text="@string/start_new_game_button_name"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pause_button" />
</androidx.constraintlayout.widget.ConstraintLayout>