<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Select_parametrs_for_new_game">

    <TextView
        android:id="@+id/count_of_players_text"
        android:layout_width="200dp"
        android:layout_height="34dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="72dp"
        android:gravity="center"
        android:text="@string/count_of_players"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/seekBar_count_of_players"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBar_count_of_players"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="213dp"
        android:layout_height="70dp"
        android:layout_marginTop="50dp"
        android:indeterminate="false"
        android:max="4"
        android:padding="20dp"
        android:progress="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/count_of_players_text" />

    <TextView
        android:id="@+id/count_of_time_text"
        android:layout_width="200dp"
        android:layout_height="34dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="280dp"
        android:gravity="center"
        android:text="@string/count_of_time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_count_of_players"
        app:layout_constraintVertical_bias="0.0" />

    <SeekBar
        android:id="@+id/seekBar_count_of_time"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="213dp"
        android:layout_height="70dp"
        android:layout_marginTop="50dp"
        android:max="4"
        android:progress="0"
        app:layout_constraintEnd_toEndOf="@+id/count_of_time_text"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="@+id/count_of_time_text"
        app:layout_constraintTop_toBottomOf="@+id/count_of_time_text" />

    <Button
        android:id="@+id/start_game_with_params_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="69dp"
        android:gravity="center"
        android:onClick="start_game_with_param"
        android:text="@string/start_game_with_params"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_count_of_time"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>